--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "simplefolio",
   "version": "1.0.1",
   "private": "true",
+  "homepage": "https://joshuanorris.github.io/portfolio",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
   "homepage": "https://github.com/cobiwave/simplefolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
+    "gh-pages": "^6.1.1",
     "parcel": "^2.12.0",
     "prettier": "^2.8.1"
   },
