--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "simplefolio",
   "version": "1.0.1",
   "private": "true",
-  "homepage": "https://joshuanorris.github.io/portfolio",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -21,7 +20,6 @@
   "bugs": {
     "url": "https://github.com/cobiwave/simplefolio/issues"
   },
-  "homepage": "https://github.com/cobiwave/simplefolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "gh-pages": "^6.1.1",
@@ -33,6 +31,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
+    "react-router-dom": "^6.23.1",
     "vanilla-tilt": "^1.8.0"
   }
 }
